# sisTOPOGRAFIA

./: .gitattributes  .gitignore  ALPHA_RELEASE_REPORT.md  ANALISE_COMPLETA_ARQUIVOS.md  ANALISE_STORAGE_FASE3.md  ANALISE_TECNICA_PT.md  ATUALIZACAO_DXF_GROQ.md  AUDITORIA_TECNICA_COMPLETA.md  AVALIACAO_VISUAL.txt  CHECKLIST_DEPLOY.md  CHECKLIST_IMPLEMENTACAO.md  CLOUD_RUN_DEPLOYMENT_FIX.md  CLOUD_TASKS_QUEUE_FIX_SUMMARY.md  COMMIT_GUIDE.md  CONFIGURACAO_OIDC.md  CONTRIBUTING.md  CORRECAO_CORS_CLOUD_RUN.md  CORRECAO_GITMODULES.md  CORRECAO_RATE_LIMITER.md  CORRECOES_URGENTES.md  DELIVERABLES_MANIFEST.md  DEPLOY_DO_ZERO.md  DEVELOPER_REFERENCE_CARD.md  DIAGNOSTIC_DXF_ISSUE.md  DOCKER_EVALUATION.md  DXF_CLOUD_TASKS_FIX_SUMMARY.md  DXF_CLOUD_TASKS_PERMISSIONS_FIX.md  DXF_ERROR_FIX_SUMMARY.md  FINAL_RESOLUTION_PYTHON_VERSION.md  FIX_DOCKER_BUILD_FAILURE.md  FIX_SUMMARY_DXF_ELEVATION_GROQ.md  FRONTEND_CODEBASE_ANALYSIS.md  GITHUB_ACTIONS_SETUP.md  GUIA_DEPLOY.md  GUIA_FIRESTORE_FASE3.md  GUIA_RAPIDO_GROQ.md  IMPLEMENTACAO_FASE1_FASE2.md  IMPLEMENTATION_COMPLETE.txt  IMPLEMENTATION_SUMMARY.md  INDEX_MASTER.md  (+48 more)
sisTOPOGRAFIA/py_engine/: .audit_final.txt  .audit_test_result.txt  .b2_result.txt  .coveragerc  .final_result.txt  analytics_engine.py  bim_data_attacher.py  constants.py  contour_generator.py  controller.py  debug_integration.py  debug_labels.py  dxf_generator.py  dxf_geometry_drawer.py  dxf_styles.py  dxf_terrain_drawer.py  elevation_client.py  layer_classifier.py  legend_builder.py  live_test_generator.py  main.py  memorial_engine.py  osmnx_client.py  pyproject.toml  (+7 more)
(+1933 files in other folders)
