[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sisTOPOGRAFIA-engine"
version = "1.0.0"
description = "Python DXF generation engine for sisTOPOGRAFIA"
requires-python = ">=3.11"
dependencies = [
    "osmnx>=1.9.3",
    "ezdxf>=1.3.0",
    "geopandas>=0.14.4",
    "shapely>=2.0.6",
    "networkx>=3.3",
    "scipy>=1.13.0",
    "numpy>=1.26.4",
    "requests>=2.32.3",
    "Pillow>=10.4.0",
    "pyproj>=3.6.1",
    "matplotlib>=3.8.4",
    "reportlab>=4.2.2",
    "fpdf2>=2.7.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
